# Newcastle-Racing

./: .gitattributes  .gitignore  .gitmodules  Dockerfile  README.md  SETUP.md  boot  docker-compose.direct.yml  docker-compose.yml  docker-compose_windows.yml  docker-compose_x.yml  entrypoint.sh  hello_message.txt  hello_world.sh  launch_docker.sh  launch_simulator.sh  main.py  personal_config.sh  pyproject.toml  setup  static_integration_day.md
.github/workflows/: docker.yml
docs/: AVX.md  Simulation.md
src/: entrypoint.sh  entrypoint_live.sh
src/MPCC/C++/: mpcc_controller.cpp
src/ft-fsd-path-planning/fsd_path_planning/: path_planning_node.py
src/newcastle_racing_ai/: setup.py
src/newcastle_racing_ai/launch/: all_nodes.launch.py  nra_launch.py  nra_launch_eufs.py  static_integration.launch.py
src/newcastle_racing_ai/newcastle_racing_ai/: camera.py  cantest.py  controller.py  controller_dongxu.py  distance_tracker.py  mission_control.py  odometry.py  odometry_old.py  parameters.py  perception.py  safety.py
src/newcastle_racing_ai/newcastle_racing_ai/utils/: mpc_module.py
src/newcastle_racing_ai_msgs/: CMakeLists.txt
src/newcastle_racing_ai_msgs/msg/: DistanceTotal.msg  EBS.msg  Mission.msg  MissionState.msg  NewCarState.msg
src/nrai_carmaker/: build.bat  nrai_carmaker_sensors.cpp  nrai_carmaker_server.py  pyproject.toml
src/ros_can/FS-AI-API/: setup.sh
src/ros_can/FS-AI-API/FS-AI_API_Console/: fs-ai_api_console
src/ros_can/include/: ros_can.hpp
src/ros_can/launch/: ros_can.launch.py
src/ros_can/src/: ros_can.cpp
(+3 files in other folders)
